@@ -2,6 +2,7 @@
 * Fix X/Y polarization issue
 * Change internal representation of networkPort from integer to string to accomodate ethernet device names
 * Fix polarization detection in cases where antennas have heterogeneous polarization needs
+* Add psrflag utility -- looks at fringe rates beating against pulsar period with full pulsar gate as a window function 
 
 3.3.0
 * Allow ".input" portion of input file to be optional
